<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_init"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/action_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical">

        <!-- Small forgot password title
        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="Resetting lost password"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
        -->

        <TextView
            android:id="@+id/textViewForgotPasswordInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/codeInfo"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/editTextForgotPasswordCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:ems="10"
            android:hint="@string/forgotPasswordCode"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonForgotPasswordNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:background="@drawable/my_button_bg"
            android:text="@string/next"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textViewForgotPasswordResendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/forgotPasswordNoCode"
            android:textColor="@color/colorBlue" />
    </LinearLayout>
</LinearLayout>
