<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_init"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/action_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical">

        <!-- Small change password title
        <TextView
            android:id="@+id/textViewChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="Change password"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
        -->

        <TextView
            android:id="@+id/textViewChangePasswordInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:text="@string/changePasswordInfo"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/editTextChangePasswordPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextChangePasswordVerifyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:ems="10"
            android:hint="@string/verifyPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonChangePasswordNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:background="@drawable/my_button_bg"
            android:text="@string/next"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>
